--- a/webpack/vue2+router+resource+element_ui/package.json
+++ b/webpack/vue2+router+resource+element_ui/package.json
@@ -9,7 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "body-parser": "^1.16.1",
+    "body-parser": "^1.16.0",
+    "element-ui": "^1.1.6",
     "express": "^4.14.1",
     "express-ws": "^2.0.0",
     "mysql": "^2.13.0",
@@ -24,6 +25,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "style-loader": "^0.13.1",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0",
